--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+
+
+
+
+
   <display-name>MarkRoster</display-name>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -8,7 +14,10 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
+    
   </welcome-file-list>
+ 
+  
   <servlet>
         <servlet-name>inicioSesion</servlet-name>
         <servlet-class>servlet.inicioSesion</servlet-class>
@@ -30,4 +39,9 @@
             30
         </session-timeout>
     </session-config>
+     <context-param>
+     <param-name>password</param-name>
+	<param-value>12345</param-value>
+</context-param>
+    
 </web-app>
